adding equipment-brand and equipment-model
