# app/Http/Requests/StoreEquipmentRequest.php
@@ -24,8 +24,8 @@ class StoreEquipmentRequest extends FormRequest
     {
         return [
             'equipment_type_id' => 'required|strict_integer|exists:equipment_types,id',
-            'brand' => 'required|strict_string|max:255',
-            'model' =>'strict_string|max:255',
+            'equipment_brand_id' => 'required|strict_integer|exists:equipment_brands,id',
+            'equipment_model_id' =>'required|strict_integer|exists:equipment_models,id',
             'serial' => 'required|strict_string|max:255|unique:equipment,serial',
             'equipment_status_id' => 'required|strict_integer|exists:equipment_statuses,id',
             'comment' => 'strict_string|max:255',
